# routes/index.js
@@ -38,5 +38,6 @@ router.get('/logout', (req, res, next)=>{
 router.use('/products', require('./products'));
 router.use('/users', require('./users'));
 router.use('/orders', require('./orders'));
+router.use('/reviews', require('./reviews'));
 
 module.exports=router;
